==> blackmagic-debug/blackmagic/src/stm32/cdcacm.c <==
#include <libopencm3/stm32/nvic.h>
#include <libopencm3/stm32/gpio.h>
#include <libopencm3/usb/usbd.h>
#include <libopencm3/usb/cdc.h>
#include <libopencm3/stm32/scb.h>
#include <libopencm3/usb/dfu.h>
#include <libopencm3/stm32/usart.h>
#include <stdlib.h>
#include "platform.h"

static void dfu_detach_complete(struct usb_setup_data *req)
{
	(void)req;

	/* Disconnect USB cable */
	gpio_set_mode(USB_PU_PORT, GPIO_MODE_INPUT, 0, USB_PU_PIN);

	/* Assert boot-request pin */
	gpio_set_mode(GPIOB, GPIO_MODE_OUTPUT_2_MHZ, 
			GPIO_CNF_OUTPUT_PUSHPULL, GPIO12);
	gpio_clear(GPIOB, GPIO12);

	/* Reset core to enter bootloader */
	scb_reset_core();
}

static int cdcacm_control_request(struct usb_setup_data *req, uint8_t **buf,
		uint16_t *len, void (**complete)(struct usb_setup_data *req))
{
	(void)complete;

	switch(req->bRequest) {
	case USB_CDC_REQ_SET_CONTROL_LINE_STATE: 
		/* This Linux cdc_acm driver requires this to be implemented 
		 * even though it's optional in the CDC spec, and we don't 
		 * advertise it in the ACM functional descriptor. */
		return 1;
#ifdef INLCUDE_UART_INTERFACE
	case USB_CDC_REQ_SET_LINE_CODING: {
		if(*len < sizeof(struct usb_cdc_line_coding)) 
			return 0;

		if(req->wIndex != 2) 
			return 0;

		struct usb_cdc_line_coding *coding = *buf;
		usart_set_baudrate(USART1, coding->dwDTERate);
		usart_set_databits(USART1, coding->bDataBits);
		switch(coding->bCharFormat) {
		case 0:
			usart_set_stopbits(USART1, USART_STOPBITS_1);
			break;
		case 1:
			usart_set_stopbits(USART1, USART_STOPBITS_1_5);
			break;
		case 2:
			usart_set_stopbits(USART1, USART_STOPBITS_2);
			break;
		}
		switch(coding->bParityType) {
		case 0:
			usart_set_parity(USART1, USART_PARITY_NONE);
			break;
		case 1:
			usart_set_parity(USART1, USART_PARITY_ODD);
			break;
		case 2:
			usart_set_parity(USART1, USART_PARITY_EVEN);
			break;
		}

		return 1;
		}
#endif
	case DFU_DETACH:
		if(req->wIndex == 4) {
			*complete = dfu_detach_complete;
			return 1;
		}
		return 0;
	}
	return 0;
}

static void cdcacm_set_config(u16 wValue)
{
	configured = wValue;

	/* GDB interface */
	usbd_ep_setup(0x01, USB_ENDPOINT_ATTR_BULK, 64, NULL);
	usbd_ep_setup(0x81, USB_ENDPOINT_ATTR_BULK, 64, NULL);
	usbd_ep_setup(0x82, USB_ENDPOINT_ATTR_INTERRUPT, 16, NULL);

#ifdef INCLUDE_UART_INTERFACE
	/* Serial interface */
	usbd_ep_setup(0x03, USB_ENDPOINT_ATTR_BULK, 64, cdcacm_data_rx_cb);
	usbd_ep_setup(0x83, USB_ENDPOINT_ATTR_BULK, 64, NULL);
	usbd_ep_setup(0x84, USB_ENDPOINT_ATTR_INTERRUPT, 16, NULL);
#endif

	usbd_register_control_callback(
			USB_REQ_TYPE_CLASS | USB_REQ_TYPE_INTERFACE, 
			USB_REQ_TYPE_TYPE | USB_REQ_TYPE_RECIPIENT,
			cdcacm_control_request);
}

void cdcacm_init(void)
{
	get_dev_unique_id(serial_no);

	usbd_init(&stm32f103_usb_driver, &dev, &config, usb_strings);
	usbd_set_control_buffer_size(sizeof(usbd_control_buffer));
	usbd_register_set_config_callback(cdcacm_set_config);

	nvic_enable_irq(NVIC_USB_LP_CAN_RX0_IRQ);

	gpio_set(USB_PU_PORT, USB_PU_PIN);
	gpio_set_mode(USB_PU_PORT, GPIO_MODE_OUTPUT_10_MHZ, 
			GPIO_CNF_OUTPUT_PUSHPULL, USB_PU_PIN);
}
